Add endpoint PUT traces
